--- a/templates/file.html
+++ b/templates/file.html
@@ -54,7 +54,7 @@
             </div>
         </aside>
         <h2>
-			<span class="text">{{.Item.All}} statements &nbsp;</span>
+			<span class="text">{{.Item.Statement}} statements &nbsp;</span>
 			<button type="button" class="run button_toggle_run" value="run" data-shortcut="r" title="Toggle lines run">{{.Item.Reached}}<span class="text"> run</span></button>
 			<button type="button" class="mis show_mis button_toggle_mis" value="mis" data-shortcut="m" title="Toggle lines missing">{{.Item.Missed}}<span class="text"> missing</span></button>
             <button type="button" class="exc show_exc button_toggle_exc" value="exc" data-shortcut="x" title="Toggle lines excluded">0<span class="text"> excluded</span></button>
