--- a/templates/file.html
+++ b/templates/file.html
@@ -52,7 +52,7 @@
         <p class="text">
             <a id="indexLink" class="nav" href="index.html">&Hat; index</a> &nbsp; &nbsp;
             &nbsp; &nbsp; &nbsp;
-            <a href="https://github.com/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
+            <a href="https://github.com/hatto/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
         </p>
         <aside class="hidden">
             <button type="button" class="button_top_of_page" data-shortcut="0"/>
@@ -73,7 +73,7 @@
         <p>
             <a id="indexLink" class="nav" href="index.html">&Hat; index</a> &nbsp; &nbsp;
             &nbsp; &nbsp; &nbsp;
-            <a href="https://github.com/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
+            <a href="https://github.com/hhatto/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
             The original HTML template used in this report is provided by <a href="https://coverage.readthedocs.io/en/" class="text-reset">coverage.py</a>.
         </p>
     </div>
