--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <input id="filter" type="text" value="" placeholder="filter..." />
         </form>
         <p class="text">
-            <a href="https://github.com/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
+            <a href="https://github.com/hhatto/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
         </p>
     </div>
 </header>
@@ -93,7 +93,7 @@
 <footer>
     <div class="content">
         <p>
-            <a href="https://github.com/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
+            <a href="https://github.com/hhatto/go-cover-coveragepy" class="text-reset">go-cover-coveragepy</a>, created at {{.CreatedAt | strftime}} <br />
             The original HTML template used in this report is provided by <a href="https://coverage.readthedocs.io/en/" class="text-reset">coverage.py</a>.
         </p>
     </div>
